2002-09-30  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (parse_options): move index_point to inside the 
	HAVE_GETOPT_LONG, because index_point is used with getopt_long only.

	* configure.ac: 0.23.2
	Compiles and works on AIX.

	* tests/param-unknown.sh: add -u to check.
	along with --unknown-parameter.

	* dsh.c (do_echoing_back_process): use size_t for getline argument.

	* configure.ac: 0.23.1.aix.2

	* parameter.c (read_machinenetgroup): 
	work around AIX and work around void function.

	* configure.ac: check for setnetgrent
	(SETNETGRENT_RETURNS_VOID): check for setnetgrent which
	returns void (AIX is possibly broken in this respect, so
	work around it).

	* parameter.c (read_machinelist): use size_t instead of int, 
	because getline parameter is in size_t, and AIX likes 
	size_t to be a long.
	(parse_options): change ifdef statement because AIX 
	cpp barfs on #ifdef outside of function.
	move config.h inclusion to start.

	* configure.ac: change gettext check to be warning.
	version 0.23.1.aix.1

	* configure.ac: version 0.23.1, translation is updated,
	and more checks are in place.

	* configure.ac: add checks that are recommended by 
	autoconf. They aren't really handled right now, but you know
	configure is barfing, at least.

2002-09-29  Junichi Uekawa  <dancer@debian.org>

	* add doc++ rule.

2002-09-28  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: remove changequote.
	remove AH_TEMPLATE and use AC_DEFINE third param

2002-09-25  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.23.0, introducing new code to make dsh perform with POSIXly correct getopt behavior.

	* Makefile.am (TESTS): added the new test.

	* tests/param-gnu-getopt.sh: check for the GNU getopt hackery.

	* parameter.c (parse_options): add GNU getopt hackery to make it work with POSIX manner.

	* configure.ac: use @<:@@:>@ autoconf quadrigraph
	Check that getopt is a GNU getopt, and allow for escapes.
