@@ -1,3 +1,11 @@
+2002-10-02  Junichi Uekawa  <dancer@debian.org>
+
+	* configure.ac: spelling mistake in configure script. fix.
+
+2002-10-01  Junichi Uekawa  <dancer@debian.org>
+
+	* dcp.sh: trying to create an implementation of dcp.
+
 2002-09-30  Junichi Uekawa  <dancer@debian.org>
 
 	* parameter.c (parse_options): move index_point to inside the 
